--- a/WebAssistanConector/Pages/Home.cshtml
+++ b/WebAssistanConector/Pages/Home.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model WebAssistanConector.Pages.HomeModel
 @{
-    ViewData["Title"] = "Controlador de LED";
+    ViewData["Title"] = "wacfLed";
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -29,7 +29,7 @@
         }
     </style>
 </head>
-<body style="background-color:#201A23">
+<body>
     <div class="container">
         
         <div class="row justify-content-center">
