--- a/WebAssistanConector/Pages/Shared/_Layout.cshtml
+++ b/WebAssistanConector/Pages/Shared/_Layout.cshtml
@@ -1,29 +1,26 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WebAssistanConector</title>
+    <title>@ViewData["Title"] - Home</title>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebAssistanConector.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color:#947EB0">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">WebAssistanConector</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="navbar bg-body-tertiary ">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white" href="#">
+                    <img src="~/img/logoLed.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    wacfLed
+                </a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="https://github.com/Lun4rBoy/wacfled">GitHub</a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
@@ -38,8 +35,9 @@
                 <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
                     <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
                 </a>
-                <span class="mb-3 mb-md-0 text-white">© 2024 Led Controller</span>
+                <span class="mb-3 mb-md-0 text-white">© 2024 Lun4rBoy - wacfLed Led Controller</span>
             </div>
+            <a href="https://www.flaticon.es/iconos-gratis/luz-de-ahorro-de-energia" title="By verry purnomo - Flaticon" class="text-white" target="_blank" rel="noopener noreferrer">Web Icon</a>
         </footer>
     </div>
 
